It is now optional to add closing tag name.

--- a/index.rhtml
+++ b/index.rhtml
@@ -1,10 +1,15 @@
 rhtml {
   head {
-    title { "Hello world!" } title
-  } head
+    title { "Hello world!" }
+  }
   body {
-	h1 {
-	  "Hello"
-	} h1
+    header {
+      h1 { "Hello" }
+      h2 { "This is my sample webpage." }
+    }
+    
+    main {
+      p { "How do you like my page?" }
+    }
   } body
-} rhtml
+}
